
The Targets now have the tick as achieved or not achieved with full
history on display.

Receives mailing now defaults to all for new contacts.

Added table sort to the enrolments_list for enrolment assessments.

New summary page for reporting usage statistics on comments.

The fees access check is now included on th estudent profile page.

Fix to subject permissions when editing sen_view page.

Fix to loading the first tinytab when viewing the sen page in infobook.


Version ClaSS-1.0.41 release (2013/02/19)
-------------------------------------------

New info field for previousschool used as part of Enrolment.

Made use of the informal/formal teachername option for registration
tutors.

Fix to list_student_teachers to respect classes for the current
curriculum year only.

Moved the SEN functions out to there own lib fetch_sen.

Replaced deprecated mysql type for engine in installation scripts.

Replaced deprecated mysql timestamp(14) with timestamp in installation
scripts.

Implemented senhistories for the SEN book. Includes new side options to
navigate the previous IEPs.

Small improvement to the the new_edit_class scripts to update classes
for forms automatically.

Added a count of students for each bus to the main transport page.

Tutor names added as a pop-up to the Register completion list.

EntryBook side bar displays (if it can) the next enrolment number
value to be generated.

Fixed display of assessments on the enrolments_list.

The distinction between static and live recording of enquires removed
by merging the two methods in the applications table.

Fix to statistics page for localpostcode.

Fix to fetchIncident for the catdefs.


Version ClaSS-1.0.40 release (2013/01/07)
-------------------------------------------

Fixes to the new enquiries script to decode utf8 characters and to
expunge on closing connection.

Export of invoiced charges from the remittance view page.

Function to change state of Paid/Not Paid charges from the remittance
view page.